System: fixed long-string and large image issue causing content to bleed under sidebar

--- a/themes/Default/css/main.css
+++ b/themes/Default/css/main.css
@@ -1402,3 +1402,11 @@ input[name*="phone"] ~ .LV_invalid {
     line-height: 22px;
     font-size: 11px;
 }
+
+
+#content .smallIntBorder {
+  max-width: 752px;
+}
+#content-wide .smallIntBorder {
+  max-width: 1052px;
+}
